@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-Plugin-CheckExtraTests
 
 {{$NEXT}}
 
+    [Changed]
+
+    - the 'xtest' command now accepts the same options as 'test' does
+
 0.015     2013-10-31 15:03:13 America/New_York
 
     - Shipping as a stable release
